--- a/study_1.html
+++ b/study_1.html
@@ -97,6 +97,12 @@
                     <div class="pup_content_pic">
                         <img src="images/study_pic_3.jpg" alt="產品示意圖" style="width:100%;max-width:400px;">
                     </div>
+                    <div class="pup_text large_text" style="margin-top:15px;">
+                        並搭配手機APP作額外的加值服務。
+                    </div>
+                    <div class="pup_content_pic">
+                        <img src="images/study_pic_8.png" alt="產品示意圖" style="width:100%;max-width:300px;">
+                    </div>
                 </div>
             </div>
             <div class="pup_window_content_part">
@@ -106,7 +112,7 @@
                         任務緣由：
                     </div>
                     <div class="pup_text">
-                        公司決策者<span class="emphasize_text">希望發想一套網站學習產品，將參考書、影音內容放置於網站</span>，<br />讓學生、家長能透過網站使用影音學習教材，使產品營運減少對業務人員的依賴。
+                        公司決策者<span class="emphasize_text">希望發想一套網站學習產品，將參考書、影音內容放置於網站</span>，<br />讓學生、家長能透過網站學習和付費，使產品營運減少對業務人員的依賴。
                     </div>
                     <div class="pup_text large_text bold_text emphasize_text" style="margin-top:15px;">
                         個人釐清公司現有產品後，分析網站學習產品優劣勢，
@@ -115,7 +121,7 @@
                         <span class="emphasize_text">優勢：</span><br />
                         <span class="pup_normal_text_small">
                             1.符合學生搜尋資訊的習慣。<br />
-                            2.減少產品銷售對業務人員的依賴。<br />
+                            2.減少公司營運對業務人員的依賴。<br />
                             3.有效收集學生的學習資料。
                         </span>
                     </div>
@@ -123,7 +129,7 @@
                         <span class="emphasize_text">劣勢：</span><br />
                         <span class="pup_normal_text_small">
                             1.家長擔心學生使用電腦、手機無法專心學習。<br />
-                            2.可能造成業務人員的反彈。<br />
+                            2.可能影響實體產品銷售，使業務人員不滿。<br />
                             3.建置網站的硬體、流量、技術，收支平衡難以預估。
                         </span>
                     </div>
@@ -140,7 +146,7 @@
             </div>
             <div class="pup_window_content_part">
                 <div class="pup_content">
-                    <div class="part_title h5 font_bold emphasize_text">三、活動網站製作要點</div>
+                    <div class="part_title h5 font_bold emphasize_text">三、思考產品運作要點</div>
                     <div class="pup_text large_text bold_text emphasize_text" style="margin-top:15px;">
                         1.如何解決影音流量成本？
                     </div>
@@ -173,11 +179,11 @@
                     </div>
                     <div class="pup_text" style="margin-top:5px;padding-left:40px;">
                         <ul class="text_item_list pup_normal_text_small" style="list-style:disc">
-                            <li>收集學生註冊資料，<span class="emphasize_text">擴充業務人員的客戶名單。</span></li>
-                            <li><span class="emphasize_text">紀錄學生使用網站的操作資訊</span>，給予業務人員參考幫助銷售。<br /><span class="emphasize_text">如：A學生大多觀看英文解題影音，可電訪A學生的家長推銷英文教材產品。</span></li>
+                            <li>可收集學生註冊資料，<span class="emphasize_text">擴充業務人員的客戶名單。</span></li>
+                            <li><span class="emphasize_text">紀錄學生使用網站的操作資訊</span>，給予業務人員參考幫助銷售。<br /><span class="emphasize_text">如：A學生大多觀看英文解題影音，可電訪A學生的家長推銷實體英文教材。</span></li>
                             <li>以活動網站為參考物，<span class="emphasize_text">了解家長對教學網站的接受度和看法</span>，作為後續網站產品開發的決策依據。</li>
                             <li>蒐集流量數據，<span class="emphasize_text">評估網站產品的硬體和技術成本。</span></li>
-                            <li>驗證網站產品能<span class="emphasize_text">成為硬碟產品銷售的助力</span>，減少業務人員的反彈。</li>
+                            <li>驗證網站產品能<span class="emphasize_text">成為實體產品銷售的助力</span>，減少業務人員的反彈。</li>
                         </ul>
                     </div>
                 </div>
@@ -193,7 +199,10 @@
                         2.<span class="emphasize_text">以低成本有效率的「最小可行」方案</span>，收集有利產品開發之價值資料。
                     </div>
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
-                        3.<span class="emphasize_text">思考客群需求情境，推想產品接觸熱點</span>，成功導入流量並獲取產品銷售之關鍵資料。
+                        3.<span class="emphasize_text">思考客群需求情境，推想接觸熱點</span>，成功導入流量並獲取產品銷售之關鍵資料。
+                    </div>
+                    <div class="pup_text large_text bold_text" style="margin-top:5px;">
+                        4.能思考<span class="emphasize_text">產品價值是否高於開發成本。</span>
                     </div>
                 </div>
             </div>
@@ -201,7 +210,7 @@
                 <div class="pup_content">
                     <div class="part_title h5 font_bold emphasize_text">五、成果</div>
                     <div class="pup_text large_text bold_text" style="margin-top:15px;">
-                        1.深受業務人員肯定，<span class="emphasize_text">當月硬碟產品成交率顯著提升</span>(與上月份相比成長近20%)。
+                        1.深受業務人員肯定，<span class="emphasize_text">當月實體產品成交率顯著提升</span>(與上月份相比成長近20%)。
                     </div>
 
                     <div class="pup_text large_text bold_text" style="margin-top:5px;">
