--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -83,10 +83,22 @@
         </div>
 
         <div class="pup_window_content_scroll">
+            <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;">
+                <div class="pup_content">
+                    <div class="part_title h5 font_bold emphasize_text">前言</div>
+                    <div class="pup_content_text" style="margin-top:10px;">
+                        <div class="text_row">
+                            <div class="text_item">
+                                <div class="text_item_title h6">以「5W1H」的形式和客戶<span class="emphasize_text">了解網站製作緣由和預期的使用者</span>，從中挖掘統整使用者輪廓</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="pup_window_content_part project_content_part">
                 <div class="pup_content">
-                    <div class="part_title h5 font_bold emphasize_text">一、網站主要使用者類型</div>
-                    <div class="pup_normal_text">所謂「82法則」8成的收入來自2成的消費者，<br />所以2C的產品開發前，需要定義誰會是<span class="emphasize_text">佔據8成產品收益來源的主力消費者</span>，<br />根據主力消費者的條件，作為產品開發<span class="emphasize_text">「如：行銷推廣、招募受訪者、網站內容制定...等」</span>之依據。</div>
+                    <div class="part_title h5 font_bold emphasize_text">一、網站目標使用者輪廓</div>
+                    <div class="pup_normal_text">由廣至深的逐步收斂出所謂「82法則」中<span class="emphasize_text">佔據8成產品收益來源的主力使用者</span>，<br />根據使用者輪廓作為產品開發<span class="emphasize_text">「如：行銷推廣、招募受訪者、網站內容制定...等」</span>之依據。</div>
                     <div class="pup_normal_text_small" style="margin-top:10px;">展示部分條件為例(非實際詳細資訊)。</div>
                     <div class="pup_normal_text"></div>
                     <div class="pup_content_text">
@@ -102,7 +114,7 @@
                         </div>
                     </div>
                     <div class="pup_normal_text_small" style="margin-top:5px;">可以從業務單位藉由他們經驗，了解主力消費者大概會有哪些特性和條件，<br />以<span class="emphasize_text">「產品適配性高低」、「獲利影響大小」</span>以十字量表作為條件篩選和排序，由廣入深以漏斗的方式篩選出主力客群，並從中分析使用者屬性。</div>
-                    <div class="pup_normal_text_small" style="margin-top:10px;">如果沒有業務單位可以詢問，可以「田野調查網路社群，如：FB相關主題社團觀察他們的大頭像或熱門討論的內容(語氣個性、情緒)」，<br/>對於客群能有初步的輪廓，藉此再尋求相關領域的專家進行深度的訪談，初步推估主力客群條件。</div>
+                    <div class="pup_normal_text_small" style="margin-top:10px;">如果沒有業務單位可以詢問，可以「田野調查網路社群，如：FB相關主題社團觀察他們的大頭像或熱門討論的內容(語氣個性、情緒)」，<br />對於客群能有初步的輪廓，藉此再尋求相關領域的專家進行深度的訪談，初步推估主力客群條件。</div>
 
                 </div>
             </div>
