--- a/sino_works_0.html
+++ b/sino_works_0.html
@@ -89,7 +89,7 @@
                     <div class="pup_content_text" style="margin-top:10px;">
                         <div class="text_row">
                             <div class="text_item">
-                                <div class="text_item_title h6">以「5W1H」的形式和客戶<span class="emphasize_text">了解網站製作緣由和預期的使用者</span>，從中挖掘統整使用者輪廓</div>
+                                <div class="text_item_title h6">以「5W1H」的形式和客戶<span class="emphasize_text">了解網站製作緣由和預期的使用者</span>，從中挖掘統整使用者輪廓。</div>
                             </div>
                         </div>
                     </div>
