--- a/gapp_works_1.html
+++ b/gapp_works_1.html
@@ -95,13 +95,13 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">前言</div>
                                 <div class="pup_text large_text">
-                                    產品為貼合使用者習慣，<span class="emphasize_text">以「游擊訪談」方式，詢問幾位有投資習慣的同事</span>，了解他們投資的過程和想法，作為提案參考。
+                                    產品規劃要貼合實際需求情境，<span class="emphasize_text">因此以「游擊訪談」方式，詢問幾位有投資習慣的同事</span>，了解他們投資的過程和想法，作為提案參考。
                                 </div>
                             </div>
                         </div>
                         <div class="pup_window_content_part">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">一、定義規劃依據：使用者旅程</div>
+                                <div class="part_title h5 font_bold emphasize_text">一、以「使用者旅程」作為規劃依據</div>
                                 <div class="pup_text large_text">
                                     <span class="emphasize_text">統整受訪者投資的過程描述，切分出步驟流程。</span>
                                 </div>
