--- a/gapp_works_1.html
+++ b/gapp_works_1.html
@@ -88,7 +88,7 @@
         </div>
         <div class="pup_window_tab_content_container">
             <div id="gapp_tab_1" class="pup_window_tab_content">
-                
+
                 <div class="pup_window_content_part project_content_part" style="margin-top:10px;margin-bottom:0px;">
                     <div class="pup_content">
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:30px;">
@@ -101,7 +101,7 @@
                         </div>
                         <div class="pup_window_content_part">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">一、以「使用者旅程」作為規劃依據</div>
+                                <div class="part_title h5 font_bold emphasize_text">一、以「使用者旅程」作為提案依據</div>
                                 <div class="pup_text large_text">
                                     <span class="emphasize_text">統整受訪者投資的過程描述，切分出步驟流程。</span>
                                 </div>
@@ -116,7 +116,7 @@
                         </div>
                         <div class="pup_window_content_part">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">二、資料分析，提出產品規劃觀點</div>
+                                <div class="part_title h5 font_bold emphasize_text">二、分析後提出產品規劃觀點</div>
                                 <div class="text_item" style="margin-top:10px;">
                                     <div class="text_item_title h6">分析方向</div>
                                     <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin-top:5px;">
@@ -134,9 +134,9 @@
                         </div>
                         <div class="pup_window_content_part">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">三、規劃產品頁面內容</div>
+                                <div class="part_title h5 font_bold emphasize_text">三、提案產品頁面內容</div>
                                 <div class="pup_text large_text">
-                                    <span class="emphasize_text">旅程步驟作為產品第一層級項目</span>貼合使用者投資習慣，<br />「一手掌握投資旅程」為概念，<span class="emphasize_text">以投資地點命名第一層級項目，使名稱意會當中內容</span>，方便使用者依循查找。
+                                    <span class="emphasize_text">以旅程步驟作為產品第一層級項目</span><br />「一手掌握投資旅程」為概念<span class="emphasize_text">以相關場所命名，使用者能直覺意會當中內容</span>。
                                 </div>
                                 <div class="text_item" style="margin-top:20px;">
                                     <ul class="text_item_list" style="list-style:disc;padding-left:25px;margin:0px 0px;">
@@ -147,7 +147,12 @@
                                         <li><span class="emphasize_text">審視績效、決策買賣</span>&nbsp;→&nbsp;帳務中心</li>
                                     </ul>
                                 </div>
-                                <div class="text_item_title h6" style="margin-top:20px;">入口：導覽列<br /><span class="pup_normal_text_small">(ios Tab bars、android Bottom navigation)</span></div>
+                                <div class="pup_content_pic" style="margin-top:20px;">
+                                    <picture>
+                                        <img src="images/gapp_pic_2-2.png" style="max-width:650px;width:100%;">
+                                    </picture>
+                                </div>
+                                <div class="text_item_title h6" style="margin-top:20px;">導覽列<br /><span class="pup_normal_text_small">(ios Tab bars、android Bottom navigation)</span></div>
                                 <div class="pup_content_pic_item_content" style="margin-top:5px;">
                                     <img src="images/gapp_pic_8-1.png" style="max-width:100%">
                                 </div>
@@ -308,7 +313,7 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">四、盤點資源，制定產品頁面架構</div>
                                 <div class="pup_text large_text">
-                                    依旅程圖提出的觀點，<span class="emphasize_text">篩選客戶網站內容</span>，整合出APP頁面架構和內容分類依據。
+                                    依旅程圖提出的規劃，<span class="emphasize_text">以sitemap形式盤點出客戶網站內容</span>，從中整合APP頁面架構和內容分類依據。
                                 </div>
                                 <div class="pup_content_pic">
                                     <picture>
@@ -333,7 +338,7 @@
                         </script>
                     </div>
                 </div>
-                
+
             </div>
             <div id="gapp_tab_2" class="pup_window_tab_content">
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
