--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -168,16 +168,16 @@
                         </div>
                         <div class="pup_content_pic" style="margin-top:30px;">
                             <div class="pup_normal_text font_bold" style="margin-bottom:5px;">1.登入頁</div>
-                            <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">若依客戶網站的登入介面</div>
+                            <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">若依客戶目前網站的登入介面配置</div>
                             <picture>
                                 <img src="images/gapp_pic_7-1.png" style="max-width:100%">
                             </picture>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text">
-                            資訊、功能CTA繁多
+                            同時呈現過多的資訊、功能CTA
                         </div>
                         <div class="pup_normal_text">
-                            讓使用者需專注閱讀，難以輕鬆直覺的選擇操作。
+                            使用者需專注閱讀，難以直覺的選擇操作。
                         </div>
                         <div class="pup_content_pic" style="margin-top:30px;">
                             <div class="pup_normal_text emphasize_text" style="margin-bottom:5px;">我的設計：</div>
@@ -195,15 +195,8 @@
                             </ul>
                         </div>
                         <div class="pup_content_pic" style="margin-top:20px;">
-                            <div class="pup_normal_text_small">點擊「使用者代號的資訊符號」顯示提示</div>
                             <picture>
-                                <img src="images/gapp_pic_7-2.png" style="max-width:100%">
-                            </picture>
-                        </div>
-                        <div class="pup_content_pic" style="margin-top:20px;">
-                            <div class="pup_normal_text_small">點選「登入遇到困難」，前往登入問題頁面</div>
-                            <picture>
-                                <img src="images/gapp_pic_6-4.png" style="max-width:100%">
+                                <img src="images/gapp_pic_9-1.png" style="max-width:100%">
                             </picture>
                         </div>
                         <div class="pup_content_pic" style="margin-top:30px;">
