--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -260,7 +260,7 @@
                             </div>
                             <picture>
                                 <source media="(max-width:1024px)" srcset="images/gapp_pic_7-5-1024.png" />
-                                <img src="images/gapp_pic_7-5.png" style="max-width:100%">
+                                <img src="images/gapp_pic_7-5-1024.png" style="max-width:100%">
                             </picture>
                         </div>
                     </div>
