--- a/gapp_works_1.html
+++ b/gapp_works_1.html
@@ -313,7 +313,7 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">四、盤點資源，制定產品頁面架構</div>
                                 <div class="pup_text large_text">
-                                    依旅程圖提出的規劃，<span class="emphasize_text">以sitemap形式盤點出客戶網站內容</span>，從中整合APP頁面架構和內容分類依據。
+                                    依旅程圖提出的規劃，<span class="emphasize_text">以sitemap形式盤點出客戶網站內容</span>，從中整合APP頁面架構內容，後續依架構完成產品介面設計稿。。
                                 </div>
                                 <div class="pup_content_pic">
                                     <picture>
