--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -103,7 +103,7 @@
                                     <li>優化審核員工申請福利之流程。</li>
                                 </ul>
                             </div>
-                            訪談裕隆相關單位了解現有業務流程和表單文件進行系統使用流程和功能規劃。
+                            訪談裕隆相關單位，了解現有業務流程和表單文件，進行產品使用流程和功能規劃。
                         </div>
                     </div>
                 </div>
