--- a/gapp_works_3.html
+++ b/gapp_works_3.html
@@ -233,7 +233,7 @@
                 </div>
                 <div class="pup_window_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">二、介面配置具一致性</div>
+                        <div class="part_title h5 font_bold emphasize_text">二、介面設計具一致性</div>
                         <div class="pup_text large_text">
                             版面配置、用色邏輯一致，<span class="emphasize_text">減少重複認知時間</span>
                         </div>
