--- a/yulon_works_2.html
+++ b/yulon_works_2.html
@@ -149,7 +149,7 @@
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">線框稿內容</div>
-                        <div class="pup_text large_text" style="font-size:16px;">以申請員工福利流程為例。</div>
+                        <div class="pup_text large_text" style="margin-top:10px;">以「申請員工福利商品、活動」流程為例。</div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
@@ -247,7 +247,7 @@
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">線框稿內容</div>
-                        <div class="pup_text large_text" style="font-size:16px;">以員工福利管理為例。</div>
+                        <div class="pup_text large_text" style="margin-top:10px;">以管理「員工福利商品、活動」為例。</div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
