--- a/yulon_works_3.html
+++ b/yulon_works_3.html
@@ -818,7 +818,7 @@
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:0px;">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">設計稿樣式庫</div>
-                        <div class="pup_text large_text" style="font-size:16px;">以ios為例</div>
+                        <div class="pup_text large_text" style="margin-top:10px;">以iOS為例</div>
 
                         <div class="pup_window_content_part project_content_part" style="margin-top:30px;">
                             <div class="pup_content">
