--- a/yulon_works_4.html
+++ b/yulon_works_4.html
@@ -96,29 +96,29 @@
                         </div>
                     </div>
                     <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
-                        B1員工福利
+                        B1員工福利項目
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_1.2員工福利-上架區&nbsp;局部狀態&nbsp;勾選福利項目</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_1.2員工福利項目-上架區&nbsp;理想狀態</span>
                         <img src="images/yulon_pic_9-2.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.1刪除福利項目-彈跳視窗&nbsp;初始狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.1員工福利項目-刪除項目-彈跳視窗&nbsp;初始狀態</span>
                         <img src="images/yulon_pic_9-3.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.2刪除福利項目-彈跳視窗&nbsp;理想狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.2員工福利項目-刪除項目-彈跳視窗&nbsp;理想狀態</span>
                         <img src="images/yulon_pic_9-4.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.3刪除福利項目-彈跳視窗&nbsp;錯誤狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.3員工福利項目-刪除項目-彈跳視窗&nbsp;錯誤狀態</span>
                         <img src="images/yulon_pic_9-5.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.4刪除福利項目-彈跳視窗&nbsp;局部狀態&nbsp;輸入框當前輸入(focus)</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.4員工福利項目-刪除項目-彈跳視窗&nbsp;局部狀態&nbsp;輸入框當前輸入(focus)</span>
                         <img src="images/yulon_pic_9-6.png" style="max-width:100%">
                     </div>
-                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
+                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:120px 0px 20px 0px;">
                         B2新增福利項目
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
@@ -127,68 +127,72 @@
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_1.2新增福利項目&nbsp;理想狀態</span>
-                        <img src="images/yulon_pic_9-8.png" style="max-width:100%">
+                        <img src="images/yulon_pic_9-7-2.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_1.3新增福利項目&nbsp;錯誤狀態</span>
                         <img src="images/yulon_pic_9-9.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_2.1日期選單(客製)-彈跳視窗&nbsp;初始狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_1.4新增福利項目&nbsp;局部狀態&nbsp;輸入框當前輸入(focus)</span>
+                        <img src="images/yulon_pic_9-8.png" style="max-width:100%">
+                    </div>
+                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_2.1福利申請時間-設定日期選單-彈跳視窗&nbsp;初始狀態</span>
                         <img src="images/yulon_pic_9-10.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_2.2日期選單(客製)-彈跳視窗&nbsp;理想狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_2.2福利申請時間-設定日期選單-彈跳視窗&nbsp;理想狀態</span>
                         <img src="images/yulon_pic_9-11.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_3.1時間選單(客製)-彈跳視窗&nbsp;初始狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_3.1福利申請時間-設定時間選單-彈跳視窗&nbsp;初始狀態</span>
                         <img src="images/yulon_pic_9-12.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_3.2時間選單(客製)-彈跳視窗&nbsp;理想狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_3.2福利申請時間-設定時間選單-彈跳視窗&nbsp;理想狀態</span>
                         <img src="images/yulon_pic_9-13.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.1新增表單欄位-彈跳視窗&nbsp;初始狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.1設置前台申請表單-新增表單欄位-彈跳視窗&nbsp;初始狀態</span>
                         <img src="images/yulon_pic_9-14.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.2新增表單欄位-彈跳視窗&nbsp;理想狀態(輸入文字、輸入數字)</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.2設置前台申請表單-新增表單欄位-彈跳視窗&nbsp;理想狀態</span>
                         <img src="images/yulon_pic_9-15.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.3新增表單欄位-彈跳視窗&nbsp;錯誤狀態</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.3設置前台申請表單-新增表單欄位-彈跳視窗&nbsp;錯誤狀態</span>
                         <img src="images/yulon_pic_9-16.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.4新增表單欄位-彈跳視窗&nbsp;局部狀態(下拉選單、單選選項、複選選項)</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_4.4設置前台申請表單-新增表單欄位-彈跳視窗&nbsp;局部狀態(欄位為下拉選單、單選選項、複選選項)</span>
                         <img src="images/yulon_pic_9-17.png" style="max-width:100%">
                     </div>
-                    <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_5.1設置表單欄位-彈跳視窗&nbsp;初始狀態(申請數)</span>
+                    <div class="pup_content_pic" style="margin-bottom:30px;display:none;">
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_5.1設置前台申請表單-修改表單欄位-彈跳視窗&nbsp;初始狀態</span>
                         <img src="images/yulon_pic_9-18.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
-                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_5.2設置表單欄位-彈跳視窗&nbsp;局部狀態(申請數) 輸入框已變更資料-樣式提示</span>
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B2_5.2設置前台申請表單-修改表單欄位-彈跳視窗&nbsp;局部狀態&nbsp;輸入框已變更資料-樣式提示</span>
                         <img src="images/yulon_pic_9-19.png" style="max-width:100%">
                     </div>
-                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
+                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:120px 0px 20px 0px;display:none;">
                         B3福利項目內容-前台設定
                     </div>
-                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                    <div class="pup_content_pic" style="margin-bottom:30px;display:none;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B3_1.1福利項目內容-前台設定&nbsp;初始狀態</span>
                         <img src="images/yulon_pic_9-20.png" style="max-width:100%">
                     </div>
-                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                    <div class="pup_content_pic" style="margin-bottom:30px;display:none;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B3_1.2福利項目內容-前台設定&nbsp;局部狀態&nbsp;編輯模式</span>
                         <img src="images/yulon_pic_9-21.png" style="max-width:100%">
                     </div>
-                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                    <div class="pup_content_pic" style="margin-bottom:30px;display:none;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B3_1.3福利項目內容-前台設定&nbsp;局部狀態&nbsp;輸入框已變更資料-樣式提示</span>
                         <img src="images/yulon_pic_9-22.png" style="max-width:100%">
                     </div>
-                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
+                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:120px 0px 20px 0px;">
                         B3福利項目內容-留言管理
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
@@ -203,14 +207,14 @@
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B3_7.3福利項目內容-留言管理&nbsp;局部狀態&nbsp;回覆輸入框當前輸入(focus)</span>
                         <img src="images/yulon_pic_9-25.png" style="max-width:100%">
                     </div>
-                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
+                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:120px 0px 20px 0px;">
                         B3福利項目內容-申請紀錄
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B3_12.1福利項目內容-申請紀錄&nbsp;理想狀態</span>
                         <img src="images/yulon_pic_9-26.png" style="max-width:100%">
                     </div>
-                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:40px 0px 20px 0px;">
+                    <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:120px 0px 20px 0px;">
                         B3福利項目內容-後台歷程
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
