--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -97,7 +97,8 @@
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.頻率高、需即時性的操作</span></div>
                                 <div class="pup_normal_text" style="margin-bottom:20px;"><span>以強化提示、簡化流程為設計方向。</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:0px;">如：員工福利「留言和管理員回覆」的操作機制，</div>
+                                <div class="pup_normal_text emphasize_text" style="margin-bottom:15px;">如：員工福利「留言和管理員回覆」的操作機制。</div>
+                                <div class="pup_normal_text_small" style="margin-bottom:0px;">員工可於APP(前台)對職福商品進行留言</div>
                                 <div class="pup_content_pic_item" style="text-align:left;margin-top:15px;margin-bottom:0px;">
                                     <div class="pup_content_pic_item_content yuanta_pic_1">
                                         <span>B2.1.1福利內容(前台)</span>
@@ -108,7 +109,7 @@
                                         <img src="images/yulon_pic_6-56-2.png" style="max-width:100%">
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:0px;"><span class="emphasize_text">當該福利項目有留言，後台管理員未回覆時，顯示「圖示按鈕」給予提示。</span></div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:0px;"><span class="emphasize_text">管理員未回覆員工留言時，後台介面顯示「留言圖示按鈕」給予提示。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -117,7 +118,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">點擊「留言」圖示按鈕，開啟彈跳視窗給予回覆。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">管理員點擊「留言圖示按鈕」，開啟彈跳視窗進行回覆。</span></div>
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -126,12 +127,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:0px;"><span class="emphasize_text">☑️滿足管理員頻率高、需即時性操作的使用情境</span></div>
+                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️滿足管理員頻率高、需即時性操作的使用情境</span></div>
                             </div>
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text font_bold">2.頻率低、重要性高的操作</span></div>
                                 <div class="pup_normal_text" style="margin-bottom:20px;"><span>以強化提示、給予完整操作介面為設計方向。</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:0px;">如：「申請員工福利」的操作機制</div>
+                                <div class="pup_normal_text emphasize_text" style="margin-bottom:0px;">如：「申請員工福利」的操作機制</div>
                                 <div class="pup_content_pic_item" style="text-align:left;margin-top:15px;margin-bottom:0px;">
                                     <div class="pup_content_pic_item_content yuanta_pic_1">
                                         <span>B3.1.2申請福利(前台)</span>
@@ -142,7 +143,7 @@
                                         <img src="images/yulon_pic_6-64.png" style="max-width:100%">
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:0px;"><span class="emphasize_text">當該福利項目申請時間結束，顯示申請數提示。</span></div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:0px;"><span class="emphasize_text">當該福利項目申請時間結束，顯示「申請數提示」。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -160,14 +161,14 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:0px;"><span class="emphasize_text">☑️符合管理員操作頻率低、重要性高的業務流程。</span></div>
+                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️符合管理員操作頻率低、重要性高的業務流程。</span></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="pup_window_content_part" style="padding-left:0px;margin-bottom:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、針對前台使用需求，設計功能機制</div>
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、針對業務需求，設計功能機制</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;"><span>針對福利項目，有彈性設置申請表單。</span></div>
@@ -178,7 +179,7 @@
                                             <img src="images/yulon_pic_6-37.png" style="max-width:100%">
                                         </div>
                                     </div>
-                                    <div class="pup_normal_text emphasize_text" style="margin-top:0px;margin-bottom:10px;"><span>因福利項目不同，申請資料的填寫也有所差異。</span></div>
+                                    <div class="pup_normal_text emphasize_text" style="margin-top:0px;margin-bottom:10px;"><span>因福利項目不同，申請表單也會有所差異。</span></div>
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
                                             <span>B3申請福利(前台)-商品</span>
@@ -199,8 +200,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">申請表單區塊，會預設固定需求的表單欄位。</span></div>
-                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">點擊「＋表單欄位」按鈕，可開啟新增欄位視窗。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">1.申請表單區塊，預先設置固定需求的表單欄位。</span></div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">2.點擊「＋表單欄位」按鈕，可開啟「新增表單欄位」視窗。</span></div>
                                 <div style="margin-top:0px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -222,12 +223,12 @@
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:0px;">
                                             <div class="pup_normal_text" style="margin-bottom:10px;"><span class="emphasize_text">訪談業務情境，將「常用欄位」開發成模組，選擇套用可自動帶入資料。</span></div>
-                                            <span style="position:relative;top:-5px;">B2_5設置表單欄位-彈跳視窗<br />程式開發「檢核輸入資料」，模組化套用欄位，完善申請表單的防錯機制。</span>
+                                            <span style="position:relative;top:-5px;">B2_5設置表單欄位-彈跳視窗<br /><span class="emphasize_text">模組化欄位含有「檢核欄位資料功能」</span>，完善申請表單的防錯機制。</span>
                                             <img src="images/yulon_pic_9-18-2.png" style="max-width:100%">
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:0px;"><span class="emphasize_text">☑️設計思考可行方案，依情境滿足「彈性、客製」功能需求。</span></div>
+                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️設計思考可行方案，依情境滿足「彈性、客製」功能需求。</span></div>
                             </div>
                         </div>
                         <div class="pup_window_content_end_tip_container">
@@ -275,7 +276,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text emphasize_text font_bold">※如此，有效率解決使用者問題，減少管理單位處理的人工成本。</div>
+                                <div class="pup_normal_text emphasize_text font_bold">☑️有效率解決使用者問題，減少管理單位處理的人工成本。</div>
                             </div>
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="part_title h5 font_bold emphasize_text" style="margin:20px 0px 10px 0px;">二、依資訊重要度，設計介面層級引導視覺閱讀</div>
@@ -366,7 +367,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:0px;margin-bottom:30px;"><span class="emphasize_text">☑️使用者能直覺反應當前頁面之層級</span>，減輕操作認知成本。</div>
+                                <div class="pup_normal_text font_bold" style="margin-top:0px;margin-bottom:30px;"><span class="emphasize_text">☑️使用者能直覺反應當前頁面之層級</span>，減輕操作認知成本。</div>
                             </div>
                         </div>
                         <div class="pup_window_content_end_tip_container">
@@ -389,7 +390,7 @@
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="font_bold">2.福利項目<span class="emphasize_text">申請率：</span></span></div>
                                 <div class="pup_normal_text" style="margin-bottom:5px;">「前台帳號啟用數」÷福利項目「申請員工數」×100%&nbsp;=&nbsp;申請率。</div>
-                                <div class="pup_normal_text" style="margin-top:30px;"><span class="emphasize_text">☑️可有效利用數據資料</span>，形成有價值的參考依據(員工政策)。</div>
+                                <div class="pup_normal_text font_bold" style="margin-top:30px;"><span class="emphasize_text">☑️可有效利用數據資料</span>，形成有價值的參考依據(員工政策)。</div>
                             </div>
                         </div>
                     </div>
@@ -417,7 +418,7 @@
                             <span class="pup_normal_text">「前台帳號啟用數」÷福利項目「申請員工數」×100%。</span>
                             <div style="margin:10px 0px 5px 0px;"><img src="images/yulon_pic_10-21.png" style="max-width:100%"></div>
                         </div>
-                        <div class="pup_normal_text" style="margin-top:30px;"><span class="emphasize_text">☑️將文字、數字以圖像方式呈現</span>，增加版面閱讀效率。</div>
+                        <div class="pup_normal_text font_bold" style="margin-top:30px;"><span class="emphasize_text">☑️將文字、數字以圖像方式呈現</span>，增加版面閱讀效率。</div>
                         <div class="pup_window_content_end_tip_container">
                             <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">設計亮點&nbsp;其他</span></span>
                         </div>
