--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -95,12 +95,13 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_normal_text">
-                            <span>集團總管理處想要<br /></span>
+                            <span>裕隆集團總管理處，想透過APP產品和管理後台達成<br /></span>
                             <div class="pup_text" style="margin-top:5px;padding-left:20px;">
                                 <ul class="text_item_list pup_normal_text_small emphasize_text" style="list-style:disc">
                                     <li>加強對子公司布達資訊之效率。</li>
                                     <li>取代員工以內部信箱申請福利商品、活動的方式</li>
                                     <li>優化審核員工申請福利之流程。</li>
+                                    <li>增加集團職缺之發布管道。</li>
                                 </ul>
                             </div>
                             訪談裕隆相關單位，了解現有業務流程和表單文件，進行產品使用流程和功能規劃。
@@ -110,12 +111,12 @@
 
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">一、定義產品核心</div>
-                        <div class="pup_normal_text">除了完成產品需求目標外，<span class="emphasize_text">定義和強化使用價值，減少無效開發之風險。</span></div>
+                        <div class="part_title h5 font_bold emphasize_text">一、依需求分析產品價值</div>
+                        <div class="pup_normal_text">思考產品需求統整出執行方向和要點，藉此<span class="emphasize_text">檢核並強化使用價值，減少無效開發之風險。</span></div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6 emphasize_text">產品理念：</div>
+                                    <div class="text_item_title h6 emphasize_text">執行方向：</div>
                                     <div class="pup_normal_text">幫助集團與員工更加貼近、相互契合，讓員工APP成為集團營運的一股助力。</div>
                                 </div>
                             </div>
@@ -123,12 +124,20 @@
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6 emphasize_text">營運價值：</div>
-                                    <ul class="text_item_list" style="list-style:decimal">
-                                        <li><span class="emphasize_text">透過員工福利</span>(品牌商品、娛樂活動、團購...等)，使集團融於員工生活強化認同感。</li>
+                                    <div class="text_item_title h6 emphasize_text">產品價值：</div>
+                                    <ul class="text_item_list" style="list-style:disc">
+                                        <li>透過員工福利(品牌商品、娛樂活動、團購...等)，<span class="emphasize_text">使集團融於員工生活強化認同感。</span></li>
                                         <li>藉由<span class="emphasize_text">APP直接傳達集團訊息至員工手機</span>，取代總管理處→各公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
-                                        <li><span class="emphasize_text">再利用「員工申請福利」功能模組，增設「申請集團職缺」，</span>優化集團人才資源存留和獲取，<span class="emphasize_text">分化產品開發成本、增加使用價值。</span></li>
-                                        <li><span class="emphasize_text">收集不具個別員工識別的使用數據</span>(如：內部訊息點擊率、員工福利項目申請率)，<span class="emphasize_text">了解員工偏好，提供員工政策之參考，間接確保良好的員工體驗。</span></li>
+                                        <li>發布集團職缺資訊，員工能作轉職參考<span class="emphasize_text">加強人才資源存留。</span></li>
+                                    </ul>
+                                </div>
+                                <div class="text_item" style="margin-top:10px;">
+                                    <div class="text_item_title h6 emphasize_text">個人建議的價值強化：</div>
+                                    <ul class="text_item_list" style="list-style:disc">
+                                        <li>規劃「員工申請福利」、「申請集團職缺」為<span class="emphasize_text">共用介面和功能模組，藉此分化開發成本。</span></li>
+                                        <li>收集不具個別員工識別的使用數據(如：內部訊息點擊率、員工福利項目申請率)，<span class="emphasize_text">提供員工管理政策之參考。</span></li>
+                                        <li>員工能推薦親友應徵集團職缺，<span class="emphasize_text">增加人才資源獲取管道。</span></li>
+
                                     </ul>
                                 </div>
                             </div>
