--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -98,10 +98,10 @@
                             <span>裕隆集團總管理處，想透過APP產品和管理後台達成<br /></span>
                             <div class="pup_text" style="margin-top:5px;padding-left:20px;">
                                 <ul class="text_item_list pup_normal_text_small emphasize_text" style="list-style:disc">
-                                    <li>加強對子公司布達資訊之效率。</li>
-                                    <li>取代員工以內部信箱申請福利商品、活動的方式</li>
+                                    <li>傳達員工集團政策和內部訊息。</li>
+                                    <li>取代員工以內部信箱申請福利商品、活動的方式。</li>
                                     <li>優化審核員工申請福利之流程。</li>
-                                    <li>增加集團職缺之發布管道。</li>
+                                    <li>發布集團職缺資訊給予員工。</li>
                                 </ul>
                             </div>
                             訪談裕隆相關單位，了解現有業務流程和表單文件，進行產品使用流程和功能規劃。
@@ -126,9 +126,10 @@
                                 <div class="text_item">
                                     <div class="text_item_title h6 emphasize_text">產品價值：</div>
                                     <ul class="text_item_list" style="list-style:disc">
-                                        <li>透過員工福利(品牌商品、娛樂活動、團購...等)，<span class="emphasize_text">使集團融於員工生活強化認同感。</span></li>
                                         <li>藉由<span class="emphasize_text">APP直接傳達集團訊息至員工手機</span>，取代總管理處→各公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
-                                        <li>發布集團職缺資訊，員工能作轉職參考<span class="emphasize_text">加強人才資源存留。</span></li>
+                                        <li>透過員工福利(品牌商品、娛樂活動、團購...等)，<span class="emphasize_text">使集團融於員工生活強化認同感。</span></li>
+                                        <li>以系統功能輔助管理福利項目和審核員工申請條件，<span class="emphasize_text">減少總管理處作業的人工成本。</span></li>
+                                        <li>發布集團職缺資訊，員工作轉職參考<span class="emphasize_text">加強人才資源存留。</span></li>
                                     </ul>
                                 </div>
                                 <div class="text_item" style="margin-top:10px;">
